--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,76 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
+    color: white;
 }
-.search-bar{
 
+.search-bar{
+    margin: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
-.App{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+.container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .cardImage{
-    width: 250px;
-} */
+    width: 75%;
+    border-radius: 5px 5px;
+  }
+
+.card-title{
+    font-weight: 600;
+    padding: 8px 0px;
+    font-size: large;
+  }
+
+.card-text{
+    font-size: medium;
+    padding-bottom: 5px;
+  }
+
+.text-muted{
+    font-size: smaller;
+    padding-bottom: 5px;
+}
+
+.input-field{
+    padding: 10px;
+    margin-right: 5px;
+    border: 2px solid gold;
+    border-radius: 2.5px;
+}
+
+.submit-button{
+    padding: 10px 20px;
+    background-color: gold;
+    color: black;
+    font-weight: 700;
+    border-radius: 2.5px;
+    border: 2px solid gold;
+}
